--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -8,6 +8,6 @@
     </label>
   </form>
   <p>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">{{message}}</a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">{{message}}</a>
   </p>
 </div>
