allocate currency list as a separate component - cur-list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
   <main-header></main-header>
-  <app-form></app-form>
+  <app-form [list]="curList"></app-form>
+  <cur-list [list]="curList"></cur-list>
 </div>
