--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,18 +1,27 @@
-<form>
-  <ng-container *ngTemplateOutlet="curFieldset; context: {title: 'Міняю' | uppercase, selectName: 'curInput'}"></ng-container>
-  <ng-container *ngTemplateOutlet="curFieldset; context: {title: 'Отримую' | uppercase, selectName: 'curOutput'}"></ng-container>
+<form [formGroup]="curForm" novalidate (submit)="convertValue()">
 
-  <ng-template #curFieldset let-title="title" let-selectName="selectName">
-    <fieldset>
-      <legend>{{title}}</legend>
-      <label>
-        <input type="text">
-      </label>
-      <select name={{selectName}}>
-        <option *ngFor="let cur of list" value="{{cur.cc}}">{{ cur.cc }}</option>
-      </select>
-    </fieldset>
-  </ng-template>
+  <fieldset>
+    <legend>Міняю</legend>
+    <label>
+      <input type="number" name="valInput" formControlName="valInput">
+    </label>
+    <select name="selectInput" formControlName="selectInput">
+      <option value="UAH">UAH</option>
+      <!-- поки тільки для гривні -->
+      <!-- <option *ngFor="let cur of list" value="{{cur.cc}}">{{ cur.cc }}</option> -->
+    </select>
+  </fieldset>
+
+  <fieldset>
+    <legend>Отримую</legend>
+    <label>
+      <input type="number" name="valOutput" formControlName="valOutput">
+    </label>
+    <select name="selectOutput" (change)="changeOutputCur($event)">
+      <option value=""></option>
+      <option *ngFor="let cur of list" value="{{cur.cc}}">{{ cur.cc }}</option>
+    </select>
+  </fieldset>
 
   <button>Розрахувати</button>
 </form>
