--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -19,7 +19,9 @@
     </label>
     <select name="selectOutput" (change)="changeOutputCur($event)">
       <option value=""></option>
-      <option *ngFor="let cur of list" value="{{cur.cc}}">{{ cur.cc }}</option>
+      @for (cur of list; track cur) {
+        <option value="{{cur.cc}}">{{ cur.cc }}</option>
+      }
     </select>
   </fieldset>
 
