--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,12 @@ h5 {
   padding: 0 20px;
   max-width: 1200px;
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
