--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -1,26 +1,15 @@
+
+
 form {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
 }
 
-button {
-  display: inline-block;
-  padding: 10px 24px;
-  border: none;
-  border-radius: 7px;
-
-  color: #fff;
-  font-weight: bold;
-
-  background: #47cf73;
-
-  cursor: pointer;
-
-  &:hover {
-    background-color: #92caa4;
-  }
+mat-form-field {
+  width: 100%;
 }
 
 select {
@@ -30,7 +19,30 @@ select {
 fieldset {
   margin: 0 0 20px;
   padding: 20px 15px;
-  width: 45%;
-  border: 1px solid #ae63e4;
-  border-radius: 7px;
+  width: 90%;
+  border: 3px solid var(--mat-sys-inverse-primary);
+  background-color: var(--mat-sys-background);
+  border-radius: var(--mat-sys-corner-large);
+}
+
+.valOutput {
+  color: black !important;
+}
+
+@media (min-width: 768px) {
+  form {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  mat-form-field {
+    width: 90%;
+  }
+
+  fieldset {
+    width: 45%;
+  }
+
+
 }
