Update header component

--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,13 +1,5 @@
 <div>
   <h1>Конвертер валют</h1>
-  <form>
-    <label>
-      Введіть своє імʼя
-      <input type="text" #name (keyup.enter)="onClickMe(name.value)">
-      <input type="button" (click)="onClickMe(name.value)" value="Продовжити">
-    </label>
-  </form>
-  <p>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">{{message}}</a>
-  </p>
+  <p>Дані предоставлено <a href="https://bank.gov.ua/" target="_blank">Національним банком України</a></p>
 </div>
+<mat-divider></mat-divider>
